<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_crypto"
        android:icon="@drawable/ic_currency_bitcoin_black_24dp"
        android:title="@string/action_crypto"

        />

    <item
        android:id="@+id/action_potential_crypto"
        android:icon="@drawable/ic_local_atm_black_24dp"
        android:title="@string/action_potential_crypto"

        />

    <item
        android:id="@+id/action_info_crypto"
        android:icon="@drawable/ic_calculate_black_24dp"
        android:title="@string/action_info_crypto" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings" />
</menu>